--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "torch>=2.10.0",
     "tiktoken>=0.12.0",
+    "gensim>=4.4.0",
+    "matplotlib>=3.10.8",
+    "scikit-learn>=1.8.0",
 ]
